# alfred

./: .env.example  .env.shared.example  .gitignore  AGENTS.md  Justfile  README.md  docker-compose.yml  environment.cuda.yml  environment.yml  main.py  models.py  pyproject.toml  requirements.txt  run_server.sh
app/: Dockerfile  README.md  __init__.py  app.py  build.gradle.kts  style.css
app/src/main/kotlin/com/alfred/app/: AlfredBackendApplication.kt
app/src/main/kotlin/com/alfred/app/config/: JwtConfig.kt  SecurityConfig.kt
app/src/main/kotlin/com/alfred/app/controller/: AuthController.kt  JobController.kt
app/src/main/kotlin/com/alfred/app/dto/: AuthResponse.kt  JobHistoryResponse.kt  LoginRequest.kt  RegisterRequest.kt
app/src/main/kotlin/com/alfred/app/entity/: Job.kt  User.kt
app/src/main/kotlin/com/alfred/app/exception/: AuthExceptionHandler.kt
app/src/main/kotlin/com/alfred/app/filter/: JwtAuthenticationFilter.kt
app/src/main/kotlin/com/alfred/app/repository/: JobRepository.kt  UserRepository.kt
app/src/main/kotlin/com/alfred/app/service/: AuthService.kt  CustomUserDetailsService.kt  JobService.kt  JwtService.kt
app/src/main/resources/: application.properties
app/src/test/kotlin/com/alfred/app/: AlfredBackendApplicationTests.kt
cli/: AGENTS.md  README.md
cli/crates/alfred-cli/src/: acp.rs  main.rs
core/: .env.example  Dockerfile  README.md  main.py  models.py  pyproject.toml
core/llm/: __init__.py
core/prompts/: __init__.py
core/tests/: test_agent.py
database/: init.sql
docs/: architecture.md  roadmap.md
frontend/: README.md  app.py  index.html  next.config.ts  package-lock.json  package.json  style.css  vite.config.ts
frontend/app/: page.tsx
frontend/lib/api/: ai.ts  backend.ts  client.ts
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts  stream.ts
llm/: __init__.py
prompts/: SOUL.md  __init__.py
scripts/: __init__.py  chat.py  common.py  dev.sh  fs_agent.py  infer.py  research.py
tests/: test_agent.py  test_api.py  test_app.py  test_frontend.py  test_scripts.py
transcription/: __init__.py  config.py  service.py  types.py
transcription/backends/: base.py  faster_whisper_backend.py  parakeet_backend.py
